tests/toylang/neg/001603_mutation.toylang
program a = { while a do bool; } .
